[package]
name = "yewf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.6"
futures = "0.3.25"
log = "0.4.17"
once_cell = "1.16.0"
serde = "1.0.147"
wasm-bindgen-futures = "0.4.33"
wasm-logger = "0.2.0"
web-sys = "0.3.60"
yew = "0.19.3"

[workspace]

members = [
    "./",
    "examples/simple-form"
]

default-members = ["./"]
